# sweets-vault

./: README.md
agent/: .env-template  Dockerfile  GEMINI.md  Makefile  README.md  pyproject.toml
agent/app/: agent.py  fast_api_app.py
agent/app/app_utils/: gcs.py  hw_interface.py  telemetry.py  typing.py
agent/app/prompts/: sweet-vault-agent-en.txt  sweet-vault-agent-pl.txt
agent/tests/integration/: test_server_e2e.py
docs/: architecture_diagram.excalidraw
hardware/: README.md  blink-led.py  drawers.py  pyproject.toml
led-matrix-api/: .env.template  .gitignore  README.md  main.py  pyproject.toml
led-matrix-api/app/: auth.py  controller.py  main.py  mock_rgbmatrix.py  schemas.py
